# Language-Forum

./: .gitignore  .gitmodules  CNAME  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package-lock.json
.github/workflows/: gh_pages.yml
assets/: CNAME  tailwind-31559e7e8b3f44e2.css  tailwind-745bd88dc8c19031.css  tailwind-feeea8f21cedc2f2.css  tailwind.css
assets/styling/: main.css
src/: main.rs  require_auth.rs
src/components/: class_consts.rs  header.rs  mod.rs  page_container.rs
src/components/auth/: auth_ui.rs  auth_view.rs  avatar_menu.rs  mod.rs  oauth_button.rs
src/components/forum/: categories_table.rs  category_page.rs  category_row.rs  mod.rs  new_thread_form.rs  new_thread_page.rs  post.rs  post_profile_display.rs  profile_page.rs  thread_page.rs  thread_posts.rs  thread_row.rs  threads_table.rs
src/components/general/: blurred_backdrop.rs  dropdown.rs  error_notice.rs  file_upload.rs  forum_table.rs  forum_table_header.rs  image_or_fallback.rs  mod.rs  (+3 more)
src/helpers/: file_helper.rs  mod.rs  url_helper.rs
src/hooks/: mod.rs  session_from_params.rs  use_session_from_params.rs  use_supabase.rs
src/models/: category.rs  category_summary_view.rs  mod.rs  post.rs  post_view.rs  profile.rs  role.rs  thread.rs  thread_summary_view.rs  user_role.rs
src/views/: category.rs  create_thread.rs  home.rs  mod.rs  profile.rs  thread.rs
wasm/: language-forum.d.ts  language-forum.d.ts.br  language-forum.js  language-forum.js.br  language-forum_bg.wasm  language-forum_bg.wasm.br  language-forum_bg.wasm.d.ts  language-forum_bg.wasm.d.ts.br
(+10 files in other folders)
