[package]
name = "language-forum"
version = "0.1.0"
authors = [" <>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenv = "0.15.0"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-solid", "font-awesome-brands"] }
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk.git", features = ["storage"], branch = "main" }
mime_guess = "2.0.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
supabase-rs = { version = "0.1.0", path = "supabase-rs" }
thiserror = "2.0.11"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["serde", "v4", "js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
